<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsReportActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarlayout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_main"
            app:titleTextColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <RelativeLayout
        android:id="@+id/relativeLayout_container_details_report"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:background="@color/background_activities"
        android:layout_gravity="center"
        android:layout_below="@+id/appbarlayout_toolbar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:id="@+id/linearLayout_Id_Municipality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal"
            android:gravity="center_horizontal|center_vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_ID"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">
                <EditText
                    android:hint="@string/hint_ID"
                    android:textAlignment="center"
                    android:enabled="false"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_Municipality"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="match_parent"
                android:hint="@string/hint_municipality"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">
                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/autoCompleteTextView_municipality"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="50dp"
                    android:inputType="textCapCharacters"
                    android:maxHeight="60dp"
                    android:paddingTop="20dp"
                    android:paddingStart="20dp"
                    android:enabled="false"

                    android:imeOptions="actionNext"
                    />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_title_creationdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/linearLayout_Id_Municipality"
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/textView_title_creationdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/title_startdate"
                android:textAppearance="?attr/textAppearanceOverline"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <View
                android:id="@+id/divider1_creationdate"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignEnd="@+id/textView_title_creationdate"
                android:background="?android:attr/listDivider"
                android:layout_marginEnd="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView_title_creationdate"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <View
                android:id="@+id/divider2_creationdate"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignEnd="@+id/textView_title_creationdate"
                android:background="?android:attr/listDivider"
                android:layout_marginStart="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView_title_creationdate"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:id="@+id/linearLayout_creationdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal|center_vertical"
            android:layout_below="@+id/constraintLayout_title_creationdate"
            android:layout_marginTop="20dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:nextFocusRight="@id/imageView_calendar">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_symptom_startdate"
                android:layout_width="200dp"
                android:layout_height="wrap_content">
                <EditText
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>
            <ImageView
                android:id="@+id/imageView_calendar"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/calendar"
                android:focusable="true"/>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_title_symptoms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/linearLayout_creationdate"
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/textView_title_symptoms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/title_symptoms"
                android:textAppearance="?attr/textAppearanceOverline"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <View
                android:id="@+id/divider1_symptoms"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignEnd="@+id/textView_title_symptoms"
                android:background="?android:attr/listDivider"
                android:layout_marginEnd="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView_title_symptoms"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <View
                android:id="@+id/divider2_symptoms"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignEnd="@+id/textView_title_symptoms"
                android:background="?android:attr/listDivider"
                android:layout_marginStart="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView_title_symptoms"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <GridLayout
            android:id="@+id/gridLayout_symptoms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_below="@id/constraintLayout_title_symptoms"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true">

            <CheckBox
                android:id="@+id/checkBox_fever"
                android:checked="false"
                android:enabled="true"
                android:text="@string/symptom_fever"
                android:textColor="@color/black" />

            <CheckBox
                android:id="@+id/checkBox_cough"
                android:checked="false"
                android:enabled="true"
                android:text="@string/symptom_cough"
                android:textColor="@color/black" />

            <CheckBox
                android:id="@+id/checkBox_difficulty_breathing"
                android:checked="false"
                android:enabled="true"
                android:text="@string/symptom_difficulty_breathing"
                android:textColor="@color/black" />

            <CheckBox
                android:id="@+id/checkBox_fatigue"
                android:checked="false"
                android:enabled="true"
                android:text="@string/symptom_fatigue"
                android:textColor="@color/black" />

            <CheckBox
                android:id="@+id/checkBox_body_aches"
                android:checked="false"
                android:enabled="true"
                android:text="@string/symptom_body_aches"
                android:textColor="@color/black" />

            <CheckBox
                android:id="@+id/checkBox_headache"
                android:checked="false"
                android:enabled="true"
                android:text="@string/symptom_headache"
                android:textColor="@color/black" />

            <CheckBox
                android:id="@+id/checkBox_loss_taste_or_smell"
                android:checked="false"
                android:enabled="true"
                android:text="@string/symptom_loss_taste_or_smell"
                android:textColor="@color/black" />

            <CheckBox
                android:id="@+id/checkBox_sore_throat"
                android:checked="false"
                android:enabled="true"
                android:text="@string/symptom_sore_throat"
                android:textColor="@color/black" />

            <CheckBox
                android:id="@+id/checkBox_congestion_nose"
                android:checked="false"
                android:enabled="true"
                android:text="@string/symptom_congestion_nose"
                android:textColor="@color/black" />

            <CheckBox
                android:id="@+id/checkBox_nausea"
                android:checked="false"
                android:enabled="true"
                android:text="@string/symptom_nausea"
                android:textColor="@color/black" />

            <CheckBox
                android:id="@+id/checkBox_diarrhea"
                android:checked="false"
                android:enabled="true"
                android:text="@string/symptom_diarrhea"
                android:textColor="@color/black" />
        </GridLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_title_closecontact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/gridLayout_symptoms"
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/textView_title_closecontact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/title_closecontact"
                android:textAppearance="?attr/textAppearanceOverline"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <View
                android:id="@+id/divider1_closecontact"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignEnd="@+id/textView_title_closecontact"
                android:background="?android:attr/listDivider"
                android:layout_marginEnd="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView_title_closecontact"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <View
                android:id="@+id/divider2_closecontact"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignEnd="@+id/textView_title_closecontact"
                android:background="?android:attr/listDivider"
                android:layout_marginStart="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView_title_closecontact"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal|center_vertical"
            android:layout_marginVertical="20dp"
            android:layout_below="@+id/constraintLayout_title_closecontact"
            >
            <Spinner
                android:id="@+id/spinner_closecontact"
                android:layout_width="200dp"
                android:paddingVertical="10dp"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:background="#ddd"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>