<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="180dp"
    android:clickable="true"
    app:cardElevation="0dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    app:strokeWidth="1dp"
    android:focusable="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contraintLayoutWrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">
        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewMunicipality"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            app:cardElevation="0dp"
            app:strokeWidth="1dp"
            app:strokeColor="#000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:background="#AAA">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10dp"
                android:paddingHorizontal="10dp">
                <TextView
                    android:id="@+id/textViewTitleMunicipality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/municipality"
                    style="@style/TextAppearance.MaterialComponents.Overline"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:textAlignment="center"
                    android:layout_marginBottom="10dp"/>
                <ImageView
                    android:id="@+id/imageViewMunicipality"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_below="@+id/textViewTitleMunicipality"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/municipality"/>
                <TextView
                    android:id="@+id/textViewValueMunicipality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="ALBAL"
                    style="@style/TextAppearance.MaterialComponents.Overline"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/imageViewMunicipality"
                    android:layout_alignParentEnd="true"
                    android:textAlignment="center"
                    android:gravity="center"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewTestPCR"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            app:cardElevation="0dp"
            app:strokeWidth="1dp"
            app:strokeColor="#000"
            app:layout_constraintEnd_toStartOf="@+id/cardViewCumulativeIncidence"
            app:layout_constraintStart_toEndOf="@+id/cardViewMunicipality"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:background="#AAA">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">
                <TextView
                    android:id="@+id/textViewTitleTestPCR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/testsPCR"
                    style="@style/TextAppearance.MaterialComponents.Overline"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:textAlignment="center"
                    android:layout_marginBottom="10dp"/>
                <ImageView
                    android:id="@+id/imageViewTestPCR"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_below="@+id/textViewTitleTestPCR"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/test_pcr"/>
                <TextView
                    android:id="@+id/textViewValueTestPCR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="1000"
                    style="@style/TextAppearance.MaterialComponents.Overline"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/imageViewTestPCR"
                    android:layout_alignParentEnd="true"
                    android:textAlignment="center"
                    android:gravity="center"/>
            </RelativeLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewCumulativeIncidence"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            app:cardElevation="0dp"
            app:strokeWidth="1dp"
            app:strokeColor="#000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:background="#AAA">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">
                <TextView
                    android:id="@+id/textViewTitleCumulativeIncidence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/acumulativeIncidence"
                    style="@style/TextAppearance.MaterialComponents.Overline"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:textAlignment="center"/>
                <ImageView
                    android:id="@+id/imageViewCumulativeIncidence"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_below="@+id/textViewTitleCumulativeIncidence"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/issue"/>
                <TextView
                    android:id="@+id/textViewValueCumulativeIncidence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="1000"
                    style="@style/TextAppearance.MaterialComponents.Overline"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/imageViewCumulativeIncidence"
                    android:layout_alignParentEnd="true"
                    android:textAlignment="center"
                    android:gravity="center"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>